@@ -1,6 +1,6 @@
 Package: CAMERA
-Version: 1.1.1
-Date: 2009-02-18
+Version: 1.1.2
+Date: 2009-05-22
 Title: Collection of annotation related methods for mass spectrometry data 
 Author: Carsten Kuhl, Ralf Tautenhahn, Steffen Neumann {ckuhl|rtautenh|sneumann}@ipb-halle.de
 Maintainer: Carsten Kuhl <ckuhl@ipb-halle.de>
