@@ -10,3 +10,4 @@ exportMethods("findIsotopes")
 exportMethods("groupCorr")
 exportMethods("findAdducts")
 exportMethods("show")
+exportMethods("plotEICs")
